# Data-Engineering

demo_02_01/: cassandra_demo.ipynb  pyproject.toml  spark_demo.ipynb
demo_02_01/output_data/users_table/: part-00000-d1ead87e-4069-470f-9f3e-7843cf129376-c000.snappy.parquet
demo_02_02/: chinook.db  duckdb_demo.sql
demo_02_09/: app.py
demo_04_04/: 3nf_schema_example.ipynb  README.md  pyproject.toml  snowflake_schema_example.ipynb  star_schema_example.ipynb
demo_06_01/: README.md  chinook.db  commands.sql
