[tool.poetry]
name = "demo-04-04"
version = "0.1.0"
description = ""
authors = ["francesco.gastaldello <francesco.gastaldello@docebo.com>"]
readme = "README.md"
packages = [{include = "demo_04_04"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
faker = "^19.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
